--- a/style.css
+++ b/style.css
@@ -1,118 +1,169 @@
-/* From Uiverse.io by andrew-demchenk0 */ 
-/* you can choose any color you want. don't be afraid to experiment  */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-.input, button {
+* {
+  box-sizing: border-box;
+  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+:root {
+  --primary: yellow;
+  --dark: black;
+  --negative: white;
+  --hover: rgba(0, 0, 0, 0.6);
+}
+
+body {
   width: 100%;
-  height: 40px;
-  position: relative;
-  padding: 10px;
-  border: 0.1px solid #575cb5;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -3;
+  pointer-events: none;
+}
+.change {
+  height: 100vh;
+  width: 20%;
+  background-color: var(--primary);
+  transform: rotateY(90deg);
+  animation: show 0.4s ease forwards;
+}
+@keyframes show {
+  to {
+    transform: rotateY(0deg);
+  }
+}
+.back {
+  height: 100vh;
+  width: 10%;
+  background-color: var(--primary);
+  transform: rotateY(0deg);
+  animation: hidden 0.4s ease forwards;
+}
+@keyframes hidden {
+  to {
+    transform: rotateY(90deg);
+  }
+}
+
+main div:nth-of-type(1) {
+  animation-delay: 0.1s;
+}
+main div:nth-of-type(2) {
+  animation-delay: 0.2s;
+}
+main div:nth-of-type(3) {
+  animation-delay: 0.3s;
+}
+main div:nth-of-type(4) {
+  animation-delay: 0.4s;
+}
+main div:nth-of-type(5) {
+  animation-delay: 0.5s;
+}
+main div:nth-of-type(6) {
+  animation-delay: 0.6s;
+}
+main div:nth-of-type(7) {
+  animation-delay: 0.7s;
+}
+main div:nth-of-type(8) {
+  animation-delay: 0.8s;
+}
+main div:nth-of-type(9) {
+  animation-delay: 0.9s;
+}
+main div:nth-of-type(10) {
+  animation-delay: 1s;
+}
+
+section {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 button {
-  background: #6d74e3;
   border: none;
+  outline: none;
+  padding: 50px 50px;
+  margin-left: 20px;
+  background: transparent;
+  transition: all 0.4s ease-out;
 }
 
-.wrapper {
-  position: relative;
-  transform: skewY(-14deg);
+a {
+  transition: all 0.4s ease;
+  color: var(--dark);
+  font-size: 27px;
+  padding: 20px 20px;
+  text-decoration: none;
+  transform: scale(1);
 }
 
-.wrapper li, button {
-  position: relative;
-  list-style: none;
-  width: 200px;
-  z-index: var(--i);
-  transition: 0.3s;
-  color: white;
+a:hover {
+  color: var(--hover);
+}
+a:active {
+  color: var(--negative);
+  transform: scale(0.6);
 }
 
-.wrapper li::before, button::before {
-  position: absolute;
-  content: '';
-  background: #6d74e3;
-  top: 0;
-  left: -40px;
-  width: 40px;
-  height: 40px;
+.bottom {
+  transform: rotate(45deg) translate(2px, 3px);
+  transform-origin: center;
+  transition: all 0.4s ease-out;
+}
+.top {
+  transform: rotate(-45deg);
   transform-origin: right;
-  transform: skewY(45deg);
-  transition: 0.3s;
+  transition: all 0.4s ease-out;
+}
+.medium {
+  transform-origin: left;
+  transform: rotate(45deg) translate(0px, 0);
+  transition: all 0.4s ease-out;
 }
 
-.wrapper li::after, button::after {
-  position: absolute;
-  content: '';
-  background: #6d74e3;
-  width: 200px;
-  height: 40px;
-  top: -40px;
-  left: 0;
-  transform-origin: bottom;
-  transform: skewX(45deg);
-  transition: 0.3s;
+.bottom-line {
+  transform: rotate(0) translate(0, 0);
+  transition: all 0.4s ease-out;
+}
+.top-line {
+  transform: rotate(0) translate(0, 0);
+  transition: all 0.4s ease-out;
+}
+.medium-line {
+  transform: rotate(0) translate(0, 0);
+  transition: all 0.4s ease-out;
 }
 
-.wrapper li:nth-child(1)::after, .wrapper li:nth-child(1)::before {
-  background-color: #d8daf7;
+.showlink {
+  clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+  animation: fade 1.2s ease-out 0.6s forwards;
 }
-
-.wrapper li:nth-child(2)::after, .wrapper li:nth-child(2)::before {
-  background-color: #c2c5f3;
+@keyframes fade {
+  to {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
 }
-
-.wrapper li:nth-child(3)::after, .wrapper li:nth-child(3)::before {
-  background-color: #989deb;
+.hidelink {
+  clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+  animation: showl 1.2s ease-out 0.6s forwards;
 }
-
-li .input {
-  outline: none;
-  border: none;
-  color: black;
+@keyframes showl {
+  to {
+    clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+  }
 }
-
-li .input::placeholder {
-  color: black;
-}
-
-li:nth-child(1) .input {
-  background: #d8daf7;
-}
-
-li:nth-child(2) .input {
-  background: #c2c5f3;
-}
-
-li:nth-child(3) .input {
-  background: #989deb;
-}
-
-
-li:nth-child(1) .input:focus {
-  outline: none;
-  border: 3.5px solid #d8daf7;
-}
-
-li:nth-child(2) .input:focus {
-  outline: none;
-  border: 3.5px solid #c2c5f3;
-}
-
-li:nth-child(3) .input:focus {
-  outline: none;
-  border: 3.5px solid #989deb;
-}
-
-.wrapper li:hover, button:hover {
-  transform: translateX(-20px);
-}
-
-button:hover, button:hover::before, button:hover::after {
-  background: #575cb5;
-}
-
-button:active {
-  transform: translateX(0px);
-}
-
